# secguard-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: data_dictionary.md  detection_rules.md  developer_guide.md  release_notes.md  security_boundaries.md  user_guide.md
examples/: auth_events.csv  config.json  dns_queries.csv  file_hashes.csv  ioc_domains.csv  ioc_hashes.csv  ioc_ips.csv  network_flows.csv  windows_events.csv
rules/: builtin_rules.json  severity_model.json
scripts/: build_release.ps1  check_no_artifacts.ps1  check_no_network_code.ps1  check_version.ps1  count_lines.ps1  package_release.ps1  run_all_tests.ps1  smoke_test.ps1
src/: cli.rs  errors.rs  lib.rs  main.rs  models.rs  time_utils.rs  validation.rs
src/detections/: brute_force.rs  dns_ioc.rs  engine.rs  file_integrity.rs  hash_ioc.rs  ip_ioc.rs  mod.rs  network_egress.rs  risk_score.rs  suspicious_powershell.rs
src/integrity/: baseline.rs  hashing.rs  mod.rs  verify.rs
src/parsers/: auth_events.rs  dns_queries.rs  file_hashes.rs  iocs.rs  mod.rs  network_flows.rs  windows_events.rs
src/reports/: csv.rs  json.rs  markdown.rs  mod.rs  summary.rs
testdata/invalid/: bad_integer.csv  bad_timestamp.csv  header_only.csv  header_only_dns.csv  header_only_network.csv  long_line.csv  (+2 more)
tests/: cli_help_tests.rs  detection_bruteforce_tests.rs  detection_network_tests.rs  detection_powershell_tests.rs  edge_case_tests.rs  integrity_tests.rs  ioc_tests.rs  parser_auth_tests.rs  parser_dns_tests.rs  parser_network_tests.rs  parser_windows_tests.rs  report_tests.rs
(+9 files in other folders)
