[package]
name = "secguard"
version = "1.0.0"
edition = "2021"
description = "A defensive Rust cybersecurity CLI for offline log analysis, IOC matching, integrity checking, and report generation."
authors = ["SecGuard RS Contributors"]
license = "MIT"
repository = "https://github.com/weidonglang/secguard-rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1